--- a/src/output.css
+++ b/src/output.css
@@ -13,7 +13,6 @@
     --color-amber-950: oklch(27.9% 0.077 45.635);
     --color-sky-300: oklch(82.8% 0.111 230.318);
     --color-blue-200: oklch(88.2% 0.059 254.128);
-    --color-pink-300: oklch(82.3% 0.12 346.018);
     --color-pink-400: oklch(71.8% 0.202 349.761);
     --color-gray-300: oklch(87.2% 0.01 258.338);
     --color-gray-400: oklch(70.7% 0.022 261.325);
@@ -223,9 +222,6 @@
   .-left-\[150px\] {
     left: calc(150px * -1);
   }
-  .left-1 {
-    left: calc(var(--spacing) * 1);
-  }
   .left-1\/2 {
     left: calc(1/2 * 100%);
   }
@@ -256,23 +252,14 @@
   .my-\[10px\] {
     margin-block: 10px;
   }
-  .mt-\[6\] {
-    margin-top: 6;
+  .mt-\[20px\] {
+    margin-top: 20px;
   }
   .mt-\[40px\] {
     margin-top: 40px;
   }
-  .mt-\[64\] {
-    margin-top: 64;
-  }
-  .mt-\[64p\] {
-    margin-top: 64p;
-  }
   .mt-\[64px\] {
     margin-top: 64px;
-  }
-  .mr-1 {
-    margin-right: calc(var(--spacing) * 1);
   }
   .mr-2 {
     margin-right: calc(var(--spacing) * 2);
@@ -280,32 +267,23 @@
   .mr-2\.5 {
     margin-right: calc(var(--spacing) * 2.5);
   }
-  .mr-10 {
-    margin-right: calc(var(--spacing) * 10);
-  }
   .mr-\[10px\] {
     margin-right: 10px;
   }
   .mr-\[26px\] {
     margin-right: 26px;
   }
-  .mb-1 {
-    margin-bottom: calc(var(--spacing) * 1);
-  }
-  .mb-10 {
-    margin-bottom: calc(var(--spacing) * 10);
-  }
-  .mb-\[1\] {
-    margin-bottom: 1;
-  }
-  .mb-\[10\] {
-    margin-bottom: 10;
-  }
-  .mb-\[10p\] {
-    margin-bottom: 10p;
+  .mr-\[30px\] {
+    margin-right: 30px;
   }
   .mb-\[10px\] {
     margin-bottom: 10px;
+  }
+  .-ml-\[50px\] {
+    margin-left: calc(50px * -1);
+  }
+  .ml-\[7\.5px\] {
+    margin-left: 7.5px;
   }
   .block {
     display: block;
@@ -316,9 +294,6 @@
   .grid {
     display: grid;
   }
-  .table {
-    display: table;
-  }
   .\!h-\[32px\] {
     height: 32px !important;
   }
@@ -328,35 +303,8 @@
   .h-8 {
     height: calc(var(--spacing) * 8);
   }
-  .h-\[1\.0667rem\] {
-    height: 1.0667rem;
-  }
-  .h-\[1\] {
-    height: 1;
-  }
-  .h-\[1px\] {
-    height: 1px;
-  }
-  .h-\[2\] {
-    height: 2;
-  }
-  .h-\[4\] {
-    height: 4;
-  }
-  .h-\[6\] {
-    height: 6;
-  }
-  .h-\[6px\] {
-    height: 6px;
-  }
-  .h-\[7\] {
-    height: 7;
-  }
-  .h-\[18px\] {
-    height: 18px;
-  }
-  .h-\[20\] {
-    height: 20;
+  .h-\[20px\] {
+    height: 20px;
   }
   .h-\[28px\] {
     height: 28px;
@@ -370,12 +318,6 @@
   .h-\[38px\] {
     height: 38px;
   }
-  .h-\[40\] {
-    height: 40;
-  }
-  .h-\[40p\] {
-    height: 40p;
-  }
   .h-\[40px\] {
     height: 40px;
   }
@@ -385,20 +327,17 @@
   .h-\[46px\] {
     height: 46px;
   }
+  .h-\[50px\] {
+    height: 50px;
+  }
   .h-\[56px\] {
     height: 56px;
   }
   .h-\[60px\] {
     height: 60px;
   }
-  .h-\[64\] {
-    height: 64;
-  }
   .h-\[64px\] {
     height: 64px;
-  }
-  .h-\[72\] {
-    height: 72;
   }
   .h-\[72px\] {
     height: 72px;
@@ -418,9 +357,6 @@
   .h-\[180px\] {
     height: 180px;
   }
-  .h-\[200\] {
-    height: 200;
-  }
   .h-\[240px\] {
     height: 240px;
   }
@@ -436,35 +372,8 @@
   .h-\[538px\] {
     height: 538px;
   }
-  .h-\[640\] {
-    height: 640;
-  }
-  .h-\[640p\] {
-    height: 640p;
-  }
   .h-\[640px\] {
     height: 640px;
-  }
-  .h-\[720\] {
-    height: 720;
-  }
-  .h-\[720px\] {
-    height: 720px;
-  }
-  .h-\[2000\[\]\] {
-    height: 2000[];
-  }
-  .h-\[2000\] {
-    height: 2000;
-  }
-  .h-\[2000pox\] {
-    height: 2000pox;
-  }
-  .h-\[2000px\] {
-    height: 2000px;
-  }
-  .h-\[px\] {
-    height: px;
   }
   .\!w-\[102px\] {
     width: 102px !important;
@@ -475,17 +384,8 @@
   .w-12 {
     width: calc(var(--spacing) * 12);
   }
-  .w-\[1\] {
-    width: 1;
-  }
-  .w-\[10\] {
-    width: 10;
-  }
-  .w-\[12\] {
-    width: 12;
-  }
-  .w-\[16\] {
-    width: 16;
+  .w-\[20px\] {
+    width: 20px;
   }
   .w-\[28px\] {
     width: 28px;
@@ -499,6 +399,9 @@
   .w-\[46px\] {
     width: 46px;
   }
+  .w-\[50px\] {
+    width: 50px;
+  }
   .w-\[60px\] {
     width: 60px;
   }
@@ -510,18 +413,6 @@
   }
   .w-\[90px\] {
     width: 90px;
-  }
-  .w-\[108\] {
-    width: 108;
-  }
-  .w-\[120\] {
-    width: 120;
-  }
-  .w-\[160\] {
-    width: 160;
-  }
-  .w-\[160px\] {
-    width: 160px;
   }
   .w-\[224px\] {
     width: 224px;
@@ -544,21 +435,6 @@
   .w-\[500px\] {
     width: 500px;
   }
-  .w-\[1080\] {
-    width: 1080;
-  }
-  .w-\[1080p\] {
-    width: 1080p;
-  }
-  .w-\[1080px\] {
-    width: 1080px;
-  }
-  .w-\[1200\] {
-    width: 1200;
-  }
-  .w-\[1200p\] {
-    width: 1200p;
-  }
   .w-\[1200px\] {
     width: 1200px;
   }
@@ -567,15 +443,6 @@
   }
   .w-\[1446px\] {
     width: 1446px;
-  }
-  .w-\[1600\] {
-    width: 1600;
-  }
-  .w-\[1600p\] {
-    width: 1600p;
-  }
-  .w-\[1600px\] {
-    width: 1600px;
   }
   .w-\[1610px\] {
     width: 1610px;
@@ -592,12 +459,8 @@
   .flex-3 {
     flex: 3;
   }
-  .border-collapse {
-    border-collapse: collapse;
-  }
-  .-translate-x-1 {
-    --tw-translate-x: calc(var(--spacing) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
+  .shrink-0 {
+    flex-shrink: 0;
   }
   .-translate-x-1\/2 {
     --tw-translate-x: calc(calc(1/2 * 100%) * -1);
@@ -605,9 +468,6 @@
   }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
-  }
-  .resize {
-    resize: both;
   }
   .grid-flow-col {
     grid-auto-flow: column;
@@ -712,6 +572,9 @@
   .bg-\[\#F1F2F3\] {
     background-color: #F1F2F3;
   }
+  .bg-amber-200 {
+    background-color: var(--color-amber-200);
+  }
   .bg-amber-300 {
     background-color: var(--color-amber-300);
   }
@@ -726,9 +589,6 @@
   }
   .bg-gray-600 {
     background-color: var(--color-gray-600);
-  }
-  .bg-pink-300 {
-    background-color: var(--color-pink-300);
   }
   .bg-pink-400 {
     background-color: var(--color-pink-400);
@@ -775,14 +635,8 @@
   .pt-5 {
     padding-top: calc(var(--spacing) * 5);
   }
-  .pt-\[3\] {
-    padding-top: 3;
-  }
-  .pt-\[30\] {
-    padding-top: 30;
-  }
-  .pt-\[30p\] {
-    padding-top: 30p;
+  .pt-\[22px\] {
+    padding-top: 22px;
   }
   .pt-\[30px\] {
     padding-top: 30px;
@@ -790,11 +644,20 @@
   .pr-\[30px\] {
     padding-right: 30px;
   }
+  .pb-\[10px\] {
+    padding-bottom: 10px;
+  }
   .pb-\[18px\] {
     padding-bottom: 18px;
   }
+  .pl-\[80px\] {
+    padding-left: 80px;
+  }
   .text-center {
     text-align: center;
+  }
+  .text-left {
+    text-align: left;
   }
   .text-2xl {
     font-size: var(--text-2xl);
@@ -839,20 +702,9 @@
   .text-white {
     color: var(--color-white);
   }
-  .underline {
-    text-decoration-line: underline;
-  }
-  .shadow {
-    --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
   .shadow-md {
     --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
   }
   .outline-0 {
     outline-style: var(--tw-outline-style);
@@ -984,16 +836,14 @@ html {
 }
 .lunbo .image-container {
   width: 100%;
+  height: 500px;
   transition: all .8s;
 }
 .image-container img {
-  height: 500px;
+  height: 100%;
   width: 100%;
   flex: none;
   mask-image: linear-gradient( to top, transparent 0%,  transparent 20%,  black 30%,  black 100%  );
-}
-.lunbo-navigation {
-  height: 100px;
 }
 @property --tw-translate-x {
   syntax: "*";
